[package]
name = "smt_map"
version = "0.0.5"
authors = ["Zihan Liu <updogliu@gmail.com>"]
edition = "2018"
description = """
A uint-to-uint map backed by Sparse Merkle Tree (SMT), which supports generating
Merkle Proofs of key-values.
"""
keywords = ["data-structure", "merkle-tree", "merkle", "tree", "map"]
repository = "https://github.com/updogliu/sparse-merkle-tree-map"
readme = "README.md"
license = "MIT"

[dependencies]
tiny-keccak = "1.4.2"
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }

[dev-dependencies]
hex = "0.3.2"

[lib]
doctest = false
